--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,12 @@ android {
             jniLibs.srcDir 'libs'
         }
     }
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -65,6 +71,7 @@ dependencies {
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.apkfuns.logutils:library:1.7.5'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
     testImplementation 'junit:junit:4.12'
     testImplementation "android.arch.persistence.room:testing:1.1.1"
