--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/> <!-- 允许程序访问CellID或WiFi热点来获取粗略的位置 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!-- //读取系统信息，包含系统版本等信息，用作统计 -->
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS"/> <!-- //这个权限用于进行网络定位 -->
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/> <!-- //获取统计数据 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> <!-- //使用步行AR导航，配置Camera权限 -->
-    <uses-permission android:name="android.permission.CAMERA"/> <!-- //程序在手机屏幕关闭后后台进程仍然运行 -->
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
@@ -22,7 +20,12 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".activity.RouteActivity"
+        <activity android:name=".activity.CollectionActivity">
+        </activity>
+        <activity android:name=".activity.TransitRouteLineDetailActivity">
+        </activity>
+        <activity
+                android:name=".activity.RouteActivity"
                 android:launchMode="singleTask">
         </activity>
         <activity android:name=".activity.SearchActivity">
