--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
         // but continue the build even when errors are found:
         abortOnError false
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
